Deploy to AWS with CDK